objects/simpli_lv__List_View_Config_Description__mdt.object
<CustomObject>
    <fields>
        <fullName>simpli_lv__Display_Name__c</fullName>
        <label>Display Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__LWC_Component_Label__c</fullName>
        <description>The label used when building an LWC UI component</description>
        <inlineHelpText>The label used when building an LWC UI component</inlineHelpText>
        <label>LWC Component Label</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Long_Description__c</fullName>
        <label>Long Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>List View Config Description</label>
    <listViews>
        <fullName>simpli_lv__All</fullName>
        <columns>simpli_lv__Display_Name__c</columns>
        <columns>MasterLabel</columns>
        <columns>simpli_lv__LWC_Component_Label__c</columns>
        <columns>simpli_lv__Long_Description__c</columns>
        <columns>simpli_lv__Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>List View Config Descriptions</pluralLabel>
</CustomObject>